--- a/index.html
+++ b/index.html
@@ -1,1 +1,196 @@
+<html>
+    <head>
+        <title>Website Dev</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/CSS/font-awesome.min.CSS">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="path/to/your/css/styles.css">
+        <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+    </head>
+    z<body>
+     <section id="banner">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPEh-4-vgoZPHFlmuBAdGz35DMmVNF7H4-Ow&usqp=CAU" class="logo">
+        <div class="banner-text">
+            <h1>Kim Website Dev Solution</h1>
+            <p>Develop your website,develop your world</p>
+            <div class="banner-btn">
+                <a href="#"><span></span>Find Out</a>
+                <a href="#"><span></span>Read More</a>
+            </div>
+        </div>
+     </section>
+     <div id="sideNav">
+        <nav>
+            <ul>
+                <li><a href="#banner">Home</a></li>
+                 <li><a href="#feature">Features</a></li>
+                  <li><a href="#service">Services</a></li>
+                   <li><a href="#feedbacks">Feedbacks</a></li>
+                    <li><a href="#footer">Meet us</a></li>
+            </ul>
+        </nav>
+     </div>
+     <div id="menuBtn">
+        <img src="https://icon-library.com/images/menu-icon-button/menu-icon-button-16.jpg" id="menu">
+     </div>
 
+    <section id="feature">
+       <div class="title-text">
+         <p>FEATURES</p>
+         <h1>This is Why you should Consider Hiring Us.</h1>
+       </div>
+       <div class="feature-box">
+         <div class="features">
+           <h1>Experienced Web Developers</h1>
+           <div class="features-desc">
+              <div class="feture-text">
+                <p>"Step into our site and experience the best of our  professionals. Our experienced personnels brings passion, creativity, and expertise to everyservice, ensuring you get great experience for any service ."</p>
+              </div>
+           </div>
+            <h1>Hire Us Now</h1>
+           <div class="features-desc">
+              <div class="feture-text">
+                <p>""Ready for great looking website & designs hire us now @ [KIM WEBSITE DEV SOLUTION ]! Choose your preferred service for a seamless experience!""</p>
+              </div>
+           </div>
+            <h1>Affordable Costs</h1>
+           <div class="features-desc">
+              <div class="feture-text">
+                <p>""Get the perfect,impressive & commendable website development,website designs & consultancy without breaking the bank! Affordable rates at [KIM WEBSITE DEV SOLUTION]. Hire us now for a budget-friendly services!""</p>
+              </div>
+           </div>
+         </div>
+         <div class="features-img">
+              <img src="https://t3.ftcdn.net/jpg/06/05/01/16/360_F_605011629_ATYjTI7TDvCLAQoO1TSGIkC6WziV0Yxa.jpg">
+         </div>
+       </div>
+    </section>
+      <section id="service">
+        <div class="title-text">
+         <p>SERVICES</p>
+         <h1>We Deliver & give Best.</h1>
+       </div>
+       <div class="service-box">
+         <div class="single-service">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwOzfH-y9rTLYNarMXiMGJAcXKa5eMOyIuks6tJ8c9MypNyJFau0ME3ZzE1clThgAh3nY&usqp=CAU">
+               <div class="overlay"></div>
+               <div class="service-desc">
+                <h3>Best Website dev,Consultancy & Designs solutions</h3>
+                <hr>
+                <p>this is test under description of website foundation</p>
+               </div>
+         </div>
+           <div class="single-service">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAqQBsJPhBQU_wv9cXPo-4j_J5ptv-XfdqQ7sr9UhvK7gs_SOWw-B1uUwP1dl09wpAzMs&usqp=CAU">
+                <div class="overlay"></div>
+                <div class="service-desc">
+                <h3>Best Website dev,Consultancy & Designs solutions</h3>
+                <hr>
+                <p>this is test under description of website foundation</p>
+               </div>
+           </div>
+             <div class="single-service">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/038/963/639/small_2x/ai-generated-male-hand-using-computer-keyboard-to-search-information-using-search-bar-function-on-your-website-search-engine-optimization-photo.jpg">
+                  <div class="overlay"></div>
+                  <div class="service-desc">
+                <h3>Best Website dev,Consultancy & Designs solutions</h3>
+                <hr>
+                <p>this is test under description of website foundation</p>
+               </div>
+             </div>
+               <div class="single-service">
+                  <img src="https://static.vecteezy.com/system/resources/previews/008/612/703/non_2x/html-code-on-computer-monitor-software-web-developer-programming-code-photo.jpg">
+                      <div class="overlay"></div>
+                      <div class="service-desc">
+                <h3>Best Website dev,Consultancy & Designs solutions</h3>
+                <hr>
+                <p>this is test under description of website foundation</p>
+               </div>
+               </div>
+        </div>
+      </section>
+      <section id="feedbacks">
+         <div class="title-text">
+         <p>FEEDBACK</p>
+         <h1>What Clients Say.</h1>
+       </div>
+       <div class="feedback-row">
+         <div class="feedback-col">
+          <div class="user">
+             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJOM_cnHGH5PB-ioINL83eIB9B-H_8POHkjA&usqp=CAU">
+             <div class="user-info">
+              <h4>DOUGLAS KYALO</h4>
+              <small>@douglaskyalo</small>
+             </div>
+          </div>
+            <p>"The service i got  @ [KIM WEBSITE DEV SOLUTION]! The design and development for my website was really impressing. I recomend you to have your experience on the same & you will really like it1!.</p>
+         </div>
+         <div class="feedback-col">
+          <div class="user">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGLyB_KDXUWgga3QjnDROUzfr8C_3Z3WHcOg&usqp=CAU">
+            <div class="user-info">
+             <h4>MACARIO CATARINA</h4>
+             <small>@macariocatarina</small>
+            </div>
+          </div>
+           <p>"I loved what they delivered to me @ [KIM WEBSITE DEV SOLUTION]! The design was so skilled."</p>
+         </div>
+         <div class="feedback-col">
+          <div class="user">
+             <img src="https://t3.ftcdn.net/jpg/06/16/32/64/360_F_616326446_o65KRfy7NMBzblfyJCLNeijA04sGZPrA.jpg">
+             <div class="user-info">
+              <h4>KIM DASHIAN</h4>
+              <small>@kimdashian</small>
+             </div>
+            <p>"Absolutely loved my experience @ [KIM WEBSITE DEV SOLUTION]! The design and development was so commendable. My website turned out exactly how I wanted it to be."</p>
+         </div>
+       </div>
+      </section>
+      <section id="footer">
+        <img src="https://media.licdn.com/dms/image/C4E12AQGwsjMmeoEX8Q/article-cover_image-shrink_720_1280/0/1520084335099?e=2147483647&v=beta&t=9v4uVbncLGSWtSuYpc-c_YerQvpu6PuJp7bkTkcGwpQ" class="footer-img">
+         <div class="title-text">
+         <p>CONTACT</p>
+         <h1>Hire Us Today...</h1>
+       </div>
+       <div class="footer-row">
+        <div class="footer-left">
+
+          <div class="social-links">
+             <a href="https://www.facebook.com/profile.php?id=61558661438602" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook"></a>
+             <a href="https://www.linkedin.com/in/douglas-kyalo-384ab0238/" target="_blank"><img src="https://cdn.icon-icons.com/icons2/2428/PNG/512/linkedin_black_logo_icon_147114.png" alt="Linkedin"></a>
+             <a href="https://www.instagram.com/kyalo7965/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
+             <a href="https://web.whatsapp.com/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3670/3670051.png" alt="Whatsapp"><a/>
+         </div>
+        </div>
+        <div class="footer-right">
+          <h1>Get In Touch</h1>
+          <p>Website: </p>
+          <p>Location: Nairobi,Kenya</p>
+          <p>Email: mutindadouglas0@gmail.com</p>
+          <p>Contact: +254 112145707</p>
+        </div>
+       </div>
+      </section>
+<script>
+    var menuBtn = document.getElementById("menuBtn")
+    var sideNav = document.getElementById("sideNav")
+    var menu    = document.getElementById("menu")
+
+    sideNav.style.right = "-250px"
+
+    menuBtn.onclick = function(){
+        if(sideNav.style.right == "-250px"){
+            sideNav.style.right = "0";
+        }else{
+            sideNav.style.right = "-250px";
+        }
+    }
+   
+   var scroll = new SmoothScroll('a[href*="#"]', {
+	 speed: 1000,
+	 speedAsDuration: true
+   });
+</script>
+    </body>
+	     </html>
